feat: Introduce new services for user profiles, common repository, and unit/user queries, alongside extensive updates to subprocess workflow, organization models, security, and testing.